[project]
name = "ccrg-m2-safety-absorption-screen"
version = "0.1.0"
description = "M2' safety-relevant absorption-structured downstream win (or honest-null) vs a sub-context-targeted dense direction u_sub. Builds safety identity slices inline (religion/race/orientation/nationality via full google/civil_comments gazetteer windows + content-flip templates), runs a $0 recall-hole + firing-Jaccard absorption screen on the frozen Gemma-Scope L12/16k JumpReLU SAE (with a non-circular form-free absorption-fraction oracle), and CONDITIONALLY runs KG-named single-absorber ablation vs u_sub=diff-of-means(target, SIBLING) at matched forget on a joint retain-utility x fluency two-judge LLM outcome. Georgia/Jordan end-to-end positive control. Reuses iter-5 core.py verbatim. Single GPU (NVIDIA L4)."
requires-python = ">=3.12"
# Versions pinned to the EXACT set installed in .venv (uv pip freeze) for reproducibility.
# torch is the cu124 build; install with:
#   uv pip install --index-strategy unsafe-best-match \
#     --extra-index-url https://download.pytorch.org/whl/cu124 torch==2.6.0 <other deps>
# (on a network filesystem also pass --link-mode=copy). SAE loaded directly from gemma-scope params.npz
# (no sae_lens / transformer_lens). OpenRouter judge requires env OPENROUTER_API_KEY; HF_TOKEN for the
# gated google/gemma-2-2b (falls back to unsloth/gemma-2-2b mirror).
dependencies = [
    "torch==2.6.0+cu124",
    "transformers==5.12.1",
    "tokenizers==0.22.2",
    "accelerate==1.14.0",
    "safetensors==0.8.0",
    "huggingface-hub==1.19.0",
    "hf-xet==1.5.1",
    "datasets==5.0.0",
    "pyarrow==24.0.0",
    "pandas==3.0.3",
    "pycountry==26.2.16",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "numpy==2.4.6",
    "loguru==0.7.3",
    "requests==2.34.2",
    "psutil==7.2.2",
    "regex==2026.5.9",
    "tqdm==4.68.3",
    "filelock==3.29.4",
    "fsspec==2026.4.0",
    "pyyaml==6.0.3",
    "networkx==3.6.1",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "triton==3.2.0",
    "joblib==1.5.3",
    "threadpoolctl==3.6.0",
    "packaging==26.2",
    "typing-extensions==4.15.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "idna==3.18",
    "urllib3==2.7.0",
    "setuptools==82.0.1",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
]
