[project]
name = "ccrg-m1pp-gated-dense-suppression"
version = "0.1.0"
description = "M1'' (iter-7): KG-localized single-absorber suppression vs a FOOTPRINT-MATCHED gated-dense control (DENSE-SUB-ABL-GATED: u_sub erased only where a projection-magnitude gate fires, tau calibrated to the KG absorber footprint), with an honest forget-operating-point disclosure (matched KL pinned at KG's tiny ceiling, max_forget per op, NOOP-identical fraction, full collateral-vs-forget curves), a $0 meaningful-forget proof (completion-accuracy drop + frozen sub-probe positive-rate drop on the real post-edit residual), a paired-bootstrap KG-vs-GATED joint CI under two OpenRouter judges, and a per-case 3-way fork (KG_BEATS_GATED_DENSE / GATED_DENSE_CLOSES_GAP / NO_MEANINGFUL_FORGET). Reuses the iter-4/5/6 Gemma-Scope L12/16k engine via core.py. Single GPU (NVIDIA L4); $0 model-internal, target <$3 OpenRouter judges (hard cap $10)."
requires-python = ">=3.12"
# torch is the cu124 build; install with:
#   uv pip install --index-strategy unsafe-best-match --link-mode=copy \
#     --extra-index-url https://download.pytorch.org/whl/cu124 torch==2.6.0 <other deps>
# OpenRouter judges require env var OPENROUTER_API_KEY; HF_TOKEN for gated google/gemma-2-2b
# (falls back to unsloth/gemma-2-2b mirror). SAE loaded directly from gemma-scope params.npz.
dependencies = [
    "accelerate==1.14.0",
    "annotated-doc==0.0.4",
    "anyio==4.14.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "filelock==3.29.4",
    "fsspec==2026.6.0",
    "ftfy==6.3.1",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.19.0",
    "idna==3.18",
    "Jinja2==3.1.6",
    "joblib==1.5.3",
    "langcodes==3.5.1",
    "locate==1.1.1",
    "loguru==0.7.3",
    "markdown-it-py==4.2.0",
    "MarkupSafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.2.0",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "packaging==26.2",
    "psutil==7.2.2",
    "Pygments==2.20.0",
    "PyYAML==6.0.3",
    "regex==2026.5.9",
    "requests==2.32.3",
    "rich==15.0.0",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.6.0+cu124",
    "tqdm==4.68.3",
    "transformers==5.12.1",
    "triton==3.2.0",
    "typer==0.25.1",
    "typing_extensions==4.15.0",
    "urllib3==2.7.0",
    "wcwidth==0.8.1",
    "wordfreq==3.1.1",
]
