[project]
name = "ccrg-iter8-base-widener-concentration"
version = "0.1.0"
description = "iter-8 M2'/M3'/M5': Base-Widener + Concentration-vs-Absorption Population Test. Screens a wide candidate vocabulary (first-letter spelling word-absorbers L/O/T/I/D + homograph entities: brands/given-names/months/cities + distributed-sense country anchors Georgia/Jordan) for lexical CONCENTRATION (d_sub-margin capture fraction), then runs a UNIFIED fair gated-dense edit (erase_dir_gated_fair: u_sub gated by a precise supervised d_sub detector, bounded beta<=1) on the most-concentrated candidates vs the KG single-absorber ablation at matched meaningful forget under two OpenRouter judges. Reuses the iter-7 Gemma-Scope L12/16k engine (core.py / method_lib.py). Single GPU (NVIDIA L4); $0 model-internal; LLM judge target <$3, hard cap $10."
requires-python = ">=3.12"
dependencies = [

    "accelerate==1.14.0",
    "annotated-doc==0.0.4",
    "anyio==4.14.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "filelock==3.29.4",
    "fsspec==2026.6.0",
    "ftfy==6.3.1",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.19.0",
    "idna==3.18",
    "Jinja2==3.1.6",
    "joblib==1.5.3",
    "langcodes==3.5.1",
    "locate==1.1.1",
    "loguru==0.7.3",
    "markdown-it-py==4.2.0",
    "MarkupSafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.2.0",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "packaging==26.2",
    "psutil==7.2.2",
    "Pygments==2.20.0",
    "PyYAML==6.0.3",
    "regex==2026.5.9",
    "requests==2.32.3",
    "rich==15.0.0",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.6.0+cu124",
    "tqdm==4.68.3",
    "transformers==5.12.1",
    "triton==3.2.0",
    "typer==0.25.1",
    "typing_extensions==4.15.0",
    "urllib3==2.7.0",
    "wcwidth==0.8.1",
    "wordfreq==3.1.1",
]
