[project]
name = "iter9-integrity-lock-eval"
version = "0.1.0"
description = "Iter-9 M4''''+M6'''' Selectivity-Localization & Spine-Consolidation Integrity-Lock (pure-CPU, $0, read-only)"
requires-python = ">=3.12"
dependencies = [
    "loguru==0.7.3",
    "numpy==2.2.1",
    "scipy==1.15.1",
    "statsmodels==0.14.4",
    # transitive (pinned for full reproducibility of the statsmodels FDR cross-check)
    "pandas==3.0.3",
    "patsy==1.0.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "packaging==26.2",
]

[tool.uv]
package = false
