[project]
name = "ccrg-m1pppp-label-scarce-where-to-gate"
version = "0.1.0"
description = "M1'''' (iter-9): LABEL-SCARCE WHERE-TO-GATE demonstration. Vary n = #sub-context labels fitting BOTH u_sub(n) and d_sub(n); compare the labeled dense fair gate (DENSE-SUB-ABL-GATED-FAIR) vs the n-INDEPENDENT label-free SAE absorber handle (KG-ABL) on (i) localization gate balanced-accuracy on a frozen eval fold ($0, K_LOC resamples) and (ii) edit preservation at matched forget (2 judges, K_EDIT resamples). Decides whether the iter-8 full-label MATCH survives label scarcity. Builds on the iter-4..8 Gemma-Scope L12/16k engine (core.py + method.py copied VERBATIM, additive _ls_stash); new driver label_scarce.py. Single GPU; $0 model-internal, target <$3 OpenRouter judges (hard cap $10)."
requires-python = ">=3.12"
# torch is the cu124 build; install with:
#   uv pip install --index-strategy unsafe-best-match --link-mode=copy \
#     --extra-index-url https://download.pytorch.org/whl/cu124 -r pyproject.toml
# OpenRouter judges require env var OPENROUTER_API_KEY; HF_TOKEN for gated google/gemma-2-2b
# (falls back to unsloth/gemma-2-2b mirror). SAE loaded directly from gemma-scope params.npz.
dependencies = [
    "accelerate==1.14.0",
    "annotated-doc==0.0.4",
    "anyio==4.14.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "filelock==3.29.4",
    "fsspec==2026.6.0",
    "ftfy==6.3.1",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.19.0",
    "idna==3.18",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "langcodes==3.5.1",
    "locate==1.1.1",
    "loguru==0.7.3",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.2.0",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "packaging==26.2",
    "psutil==7.2.2",
    "pygments==2.20.0",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.32.3",
    "rich==15.0.0",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.6.0+cu124",
    "tqdm==4.68.3",
    "transformers==5.12.1",
    "triton==3.2.0",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "wcwidth==0.8.1",
    "wordfreq==3.1.1",
]
